<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SeeD Campaign</string>
    <string name="action_settings">Settings</string>
    <string name="action_login">Login</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="sample_text">ooooooooooooooooooo</string>
    <string name="title_activity_north_east__knowlede">NorthEast_Knowlede</string>
    <string name="title_activity_central__knowlede">Central_Knowlede</string>
    <string name="title_activity_east__knowlede">East_Knowlede</string>
    <string name="title_activity_south__knowlede">South_Knowlede</string>
    <string name="title_activity_north__knowlede">North</string>
    <string name="app_id">236731096385025</string>
    <string name="ic_launcher"></string>
    <string name="tree_world1">ชื่อต้น : กระดังงาป่า</string>
    <string name="tree_world2">ชื่อพฤกษศาสตร์ : Artabotrys siamensis Miq.</string>
    <string name="title_activity_discription">รายละเอียด</string>
    <string name="login">Login</string>
    <string name="username">ชื่อบัญชีผู้ใช้:</string>
    <string name="password">รหัสผ่าน :</string>
    <string name="user_details">ข้อมูลผู้ใช้งาน</string>
    <string name="firstname">ชื่อ:</string>
    <string name="lastname">นามสกุล:</string>
    <string name="title_activity_create_user">สมัครสมาชิก</string>
    <string name="create_user_account">สมัครสมาชิก</string>
    <string name="name_tree">ชื่อต้นไม้ของคุณ</string>
    <string name="common_name">ชื่อสามัญ</string>
    <string name="number_of_trees">จำนวนต้นไม้</string>
    <string name="location">ระบุสถานที่</string>
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >หน้าหลัก</item>
        <item >ข้อมูลส่วนตัว</item>
        <item >ออกจากระบบ</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_people</item>
        <item>@drawable/ic_photos</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
</resources>
