<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        >

    </RelativeLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        >

        <ListView
            android:id="@+id/lv_dept"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="150dp"
            android:layout_marginBottom="20dp">
        </ListView>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_details"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginEnd="25dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginLeft="16dp"
            android:text="@string/firstname"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_below="@+id/textView1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="17dp" />

        <TextView
            android:id="@+id/tv_firstname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginLeft="28dp"

            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_alignTop="@+id/textView2"
            android:layout_toEndOf="@+id/textView2"
            android:layout_marginStart="14dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/lastname"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_below="@+id/textView2"
            android:layout_toStartOf="@+id/tv_firstname" />

        <TextView
            android:id="@+id/tv_lastname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"


            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_alignTop="@+id/textView3"
            android:layout_alignStart="@+id/tv_firstname" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:src="@drawable/avatar"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/lv_dept"
            android:layout_alignBottom="@+id/textView3"
            android:layout_toStartOf="@+id/textView3" />

    </RelativeLayout>
</RelativeLayout>
